Refactor using deprecated constructors